Binding con INotifyPropertyChanged

--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Models\B.cs" />
     <Compile Include="Models\C.cs" />
     <Compile Include="Models\IClock.cs" />
+    <Compile Include="Models\Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
