--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -177,6 +177,13 @@
     </Compile>
     <Compile Include="Converters\AddressToStringConverter.cs" />
     <Compile Include="Converters\NegateBooleanConverter.cs" />
+    <Compile Include="Customers\Customer.cs" />
+    <Compile Include="Customers\CustomersListView.xaml.cs">
+      <DependentUpon>CustomersListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Customers\CustomersListViewModel.cs" />
+    <Compile Include="Customers\CustomersService.cs" />
+    <Compile Include="Customers\ICustomersRepository.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Models\Indirizzo.cs" />
     <Compile Include="Services\ChildWindowService.cs" />
@@ -189,6 +196,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\PersonDataControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Customers\CustomersListView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
