--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -186,6 +186,14 @@
     <Compile Include="Customers\ICustomersRepository.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Models\Indirizzo.cs" />
+    <Compile Include="Orders\IOrdersRepository.cs" />
+    <Compile Include="Orders\Order.cs" />
+    <Compile Include="Orders\OrderDTO.cs" />
+    <Compile Include="Orders\OrdersListView.xaml.cs">
+      <DependentUpon>OrdersListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Orders\OrdersListViewModel.cs" />
+    <Compile Include="Orders\OrdersService.cs" />
     <Compile Include="Services\ChildWindowService.cs" />
     <Compile Include="Services\GlobalService.cs" />
     <Compile Include="Services\PersonaService.cs" />
@@ -219,6 +227,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Orders\OrdersListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\A.cs" />
