--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -185,6 +185,8 @@
     <Compile Include="Customers\CustomersService.cs" />
     <Compile Include="Customers\ICustomersRepository.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
+    <Compile Include="Helpers\RuoloTemplateSelector.cs" />
+    <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="Models\Indirizzo.cs" />
     <Compile Include="Orders\IOrdersRepository.cs" />
     <Compile Include="Orders\Order.cs" />
@@ -197,6 +199,7 @@
     <Compile Include="Services\ChildWindowService.cs" />
     <Compile Include="Services\GlobalService.cs" />
     <Compile Include="Services\PersonaService.cs" />
+    <Compile Include="ViewModelLocator.cs" />
     <Compile Include="ViewModels\ChildWindowViewModel.cs" />
     <Compile Include="ViewModels\PersonaViewModel.cs" />
     <Page Include="ChildWindow.xaml">
