--- a/DemoGiorno4/DemoGiorno4.csproj
+++ b/DemoGiorno4/DemoGiorno4.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Converters\AllFieldsValidConverter.cs" />
+    <Compile Include="Converters\FullNameConverter.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
