--- a/UnitTestDemoViewModel/UnitTestDemoViewModel.csproj
+++ b/UnitTestDemoViewModel/UnitTestDemoViewModel.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CartViewModelTest.cs" />
     <Compile Include="PersonaViewModelUnitTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
